--- a/templates/home.html
+++ b/templates/home.html
@@ -2,21 +2,21 @@
 
 <div class="jumbotron pt-4 pb-4">
     <h1 class="display-3">Spotify Helper</h1>
-    <p class="lead"></p>
+    <p class="lead">Spotify Helper is designed to offer features that Spotify its self does not offer, or try to improve on features Spotify does offer.</p>
 </div>
-
-<h4>What is this website?</h4>
-<p>Spotify Tools is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.
-    <br/>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page.</p>
 
 <h4 class="mt-4">Why do we need access to your spotify account?</h4>
 <p>To read or write data to your account we need to be given permission.<br/>We currently do not keep any data about you or your account.</p>
 
+<h4>Open Source</h4>
+<p>Spotify Helper is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.
+    <br/>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper/blob/master/CONTRIBUTING.md">GitHub</a> page.</p>
+
 <h4 class="mt-4">Other Services</h4>
 <p>A collection of other Spotify related websites we like.</p>
 <ul>
-    <li>JQBX: Description... todo - <a target="_blank" href="https://app.jqbx.fm/">https://app.jqbx.fm/</a></li>
-    <li>Every Noise: Description... todo - <a target="_blank" href="http://everynoise.com/">http://everynoise.com/</a></li>
+    <li>JQBX lets you play & listen to music in sync with friends or public groups - <a target="_blank" href="https://app.jqbx.fm/">https://app.jqbx.fm/</a></li>
+    <li>Every Noise is an ongoing attempt at an algorithmically-generated, readability-adjusted scatter-plot of the musical genre-space  - <a target="_blank" href="http://everynoise.com/">http://everynoise.com/</a></li>
 </ul>
 
 {{ template "footer" .}} {{end}}
