--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <div class="container">
-        <a class="navbar-brand" href="/">Spotify Tools</a>
+        <a class="navbar-brand" href="/">Spotify Helper</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
