--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,13 @@
 
 <h4>Open Source</h4>
 <p>Spotify Helper is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.
-    <br/>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper/blob/master/CONTRIBUTING.md">GitHub</a> page.</p>
+    <br/>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page.</p>
 
 <h4 class="mt-4">Other Services</h4>
 <p>A collection of other Spotify related websites we like.</p>
 <ul>
     <li>JQBX lets you play & listen to music in sync with friends or public groups - <a target="_blank" href="https://app.jqbx.fm/">https://app.jqbx.fm/</a></li>
-    <li>Every Noise is an ongoing attempt at an algorithmically-generated, readability-adjusted scatter-plot of the musical genre-space  - <a target="_blank" href="http://everynoise.com/">http://everynoise.com/</a></li>
+    <li>Every Noise is an ongoing attempt at an algorithmically-generated, readability-adjusted scatter-plot of the musical genre-space - <a target="_blank" href="http://everynoise.com/">http://everynoise.com/</a></li>
 </ul>
 
 {{ template "footer" .}} {{end}}
