--- a/templates/header.html
+++ b/templates/header.html
@@ -25,12 +25,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-            {{if .LoggedIn}}
                 <li class="nav-item"><a class="nav-link" href="/shuffle">Shuffle</a></li>
                 <li class="nav-item"><a class="nav-link" href="/duplicates">Duplicates</a></li>
                 <li class="nav-item"><a class="nav-link" href="/random">Random</a></li>
-                {{/*<li class="nav-item"><a class="nav-link" href="/unpopular">Unpopular</a></li>*/}}
-            {{end}}
+                <li class="nav-item"><a class="nav-link" href="/top">Top</a></li>
+            {{/*<li class="nav-item"><a class="nav-link" href="/unpopular">Unpopular</a></li>*/}}
             </ul>
 
             <ul class="navbar-nav">
