--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,7 @@
 {{define "footer"}}
 
+<small class="text-muted text-footer">spotifyhelper.com is not affiliated with Spotify. All copyrights reserved to their respective owners.</small>
+
 </div>
 
 <!-- Optional JavaScript -->
