--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 {{define "home"}} {{ template "header" .}}
 
 <div class="jumbotron pt-4 pb-4">
-    <h1 class="display-3">Spotify Helper</h1>
-    <p class="lead">Spotify Helper is designed to offer features that Spotify its self does not offer, or try to improve on features Spotify does offer.</p>
+    <h1 class="display-3">Helper</h1>
+    <p class="lead">Helper is designed to offer features that Spotify its self does not offer, or try to improve on features Spotify does offer.</p>
 </div>
 
 <h4 class="mt-4">Why do we need access to your spotify account?</h4>
@@ -10,7 +10,7 @@
     <br/>We do not store any data about you or your account.</p>
 
 <h4>Open Source</h4>
-<p>Spotify Helper is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.
+<p>Helper is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.
     <br/>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page.</p>
 
 <h4 class="mt-4">Other Services</h4>
