--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,12 @@ html {
     overflow-y: scroll;
 }
 
+.text-footer {
+    text-align: center;
+    display: block;
+    margin: 30px 0;
+}
+
 .btn-sm {
     padding: 0 .3rem;
 }
